<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>WAF-openapi-adapter</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/io.swagger.parser.v3/swagger-parser -->
        <dependency>
            <groupId>io.swagger.parser.v3</groupId>
            <artifactId>swagger-parser</artifactId>
            <version>2.1.8</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.spullara.mustache.java/mustache.java -->
        <dependency>
            <groupId>com.github.spullara.mustache.java</groupId>
            <artifactId>mustache.java</artifactId>
            <version>0.9.10</version>
            <type>pom</type>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.jknack/handlebars -->
        <dependency>
            <groupId>com.github.jknack</groupId>
            <artifactId>handlebars</artifactId>
            <version>4.3.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.ibissource</groupId>
            <artifactId>ibis-adapterframework-core</artifactId>
            <version>7.8-RC1</version>
        </dependency>
        <!--            This dependency should be reworked when used on a server, conflicting in code when using the OAS parser AND the SaxBuilder-->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
            <artifactId>mockito-core</artifactId>
            <version>4.9.0</version>
        </dependency>
    </dependencies>
</project>